<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SixInRow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_num">Select the required number of consecutive points:</string>
    <string name="select_matrix">matrix:</string>
    <string name="start">START</string>
    <string name="exit">EXIT</string>

    <string name="matrixSizeOne">3x3</string>
    <string name="matrixSizeTwo">10x10</string>
    <string name="matrixSizeThree">13x13</string>

</resources>
