<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gosho.sixinrow.MiddleFragment">


    <com.example.gosho.views.ButtonView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matrixSizeTwo"
        android:layout_margin="@dimen/view_margin"
        android:id="@+id/sizeTwoButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <com.example.gosho.views.ButtonView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matrixSizeThree"
        android:layout_margin="@dimen/view_margin"
        android:id="@+id/sizeThreeButton"
        android:layout_below="@+id/sizeTwoButton"
        android:layout_centerHorizontal="true" />

    <com.example.gosho.views.ButtonView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matrixSizeOne"
        android:layout_margin="@dimen/view_margin"
        android:id="@+id/sizeOneButton"
        android:layout_above="@+id/sizeTwoButton"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textSize="@dimen/text_size_text_view"
            android:id="@+id/radioButton3" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:textSize="@dimen/text_size_text_view"
            android:id="@+id/radioButton5" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            android:textSize="@dimen/text_size_text_view"
            android:id="@+id/radioButton6" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_num"
        android:id="@+id/textView"
        android:textSize="@dimen/text_size_text_view"
        android:layout_above="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_matrix"
        android:id="@+id/textView2"
        android:textSize="@dimen/text_size_text_view"
        android:layout_above="@+id/sizeOneButton"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
